--- a/index.html
+++ b/index.html
@@ -11,7 +11,57 @@
 </head>
 <body>
     <h1>Welcome To My Food Studio</h1>
-    <h2>GOOD FOOD</h2>
-    <h2>GOOD MOOD</h2>
+    <section class="Food-area text">
+        <div class="devide-area ">
+            <h2><span class='coloring'>GOOD </span>FOOD ,</h2>
+            <h2><span class="design">GOOD</span> <span class="coloring"> MOOD...!</span></h2>
+            <p>The foods you eat play an important role in supporting a healthy and happy mood.I covered the best foods for a healthy and happy mood : seafood, leafy greens, cruciferous vegetables, and nuts/seeds.</p>
+        </br>
+            <a  class="link-button"target="blank" href="https://www.facebook.com/media/set/?set=a.2583925908595070&type=3">My Recipes</a>
+        </div>
+        <div class="devide-area">
+            <img src="images/food.jpg" alt="">
+        </div>
+    </section>
+    <section class="My-area">
+        <div  class="devide-area">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+            
+        <div  class="devide-area text">
+            <h1>About Me</h1>
+            <h3>Hello,I am sumaya islam.<br>
+                <span class="color-in">B.S.C honours in computer science and engineering.</span></h3>
+            
+                <p>I already learned the basic HTML,CSS & JS. I can build any simple website. My goal is to build websites and learn advanced topics. This is my programming hero assignment. I am try to my best skill. More about details- please click this button.Thank you..!</p>
+            </br>
+                <a  class="link-button"target="blank" href="https://sumaya235.github.io/">More About Me</a>
+        </div>
+    </section>
+    <h1> My-Recipies</h1>
+    <p class="middle-point">Choose your Favourite food and order...Thank you!</p>
+    <section class="Recipe-area">
+        <div class="three-devide">
+            <img src="images/grilled-chicken.webp">
+            <h3 class="middle">grilled-chicken</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, reprehenderit?</p>
+        </div>
+        <div class="three-devide">
+            <img src="images/fried-rice.webp">
+            <h3 class="middle">fried-rice</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, animi!</p>
+        </div>
+        <div class="three-devide">
+            <img src="images/beef-steak.webp">
+            <h3 class="middle">beef-steak</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, nulla.</p>
+        </div>
+    </section>
+
+    <footer class="footer-area">
+        <h2> FOOD <span class="middle" > NETWORK </span></h2>
+        <p class="color">Eat healthy to live healthy. live healthy to live happy </p>
+    </footer>
+  
 </body>
 </html>
