--- a/index.html
+++ b/index.html
@@ -44,23 +44,42 @@
         <div class="three-devide">
             <img src="images/grilled-chicken.webp">
             <h3 class="middle">grilled-chicken</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, reprehenderit?</p>
+            <p>This food is very tasty and healthy.Myfood quality is very good.So you can choose this food and enjoy it.</p>
         </div>
         <div class="three-devide">
             <img src="images/fried-rice.webp">
             <h3 class="middle">fried-rice</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, animi!</p>
+            <p>This food is very tasty and healthy.My food quality is very good.So you can choose this food and enjoy it.</p>
         </div>
         <div class="three-devide">
             <img src="images/beef-steak.webp">
             <h3 class="middle">beef-steak</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, nulla.</p>
+            <p>This food is very tasty and healthy.My food quality is very good.So you can choose this food and enjoy it.</p>
         </div>
     </section>
+    
+    <!-- <div class="contact">
+       
+        <h4>Full name : <input type="text"></h4>
+        <h4>Email : <input type="email"> </h4>
+        <h4>Massage : <textarea cols="30" rows="10"> </textarea></h4>
+    </div> -->
+
+    <div class="contact">
+        <h1> Contuct Me</h1>
+        <form action="">
+            <label for="name">Full name:</label><br>
+            <input type="text"><br>
+            <label for="mail">Email:</label><br>
+            <input type="email"><br><br>
+            <input type="submit" value="Submit">
+          </form>
+    </div>
 
     <footer class="footer-area">
-        <h2> FOOD <span class="middle" > NETWORK </span></h2>
+        <h2> FOOD <span class="middle" > STUDIO </span></h2>
         <p class="color">Eat healthy to live healthy. live healthy to live happy </p>
+        <a href>
     </footer>
   
 </body>
