--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
             
         <div  class="devide-area text">
             <h1>About Me</h1>
-            <h3>Hello,I am sumaya islam.<br>
-                <span class="color-in">B.S.C honours in computer science and engineering.</span></h3>
+            <h3>Hi , I am sumaya islam.<br>
+               <span class="color-in">I love to eat and cooking.</span></h3> 
             
-                <p>I already learned the basic HTML,CSS & JS. I can build any simple website. My goal is to build websites and learn advanced topics. This is my programming hero assignment. I am try to my best skill. More about details- please click this button.Thank you..!</p>
+                <p> this is my simple food studio. In-sha-allah in future i will expand this.i serve food according to the customer's health and needs. my main purpose is to serve healthy food. 
+                    i have some pretty cool and different recipes, that look delicious.
+                    </p>
             </br>
                 <a  class="link-button"target="blank" href="https://sumaya235.github.io/">More About Me</a>
         </div>
@@ -71,7 +73,10 @@
             <label for="name">Full name:</label><br>
             <input type="text"><br>
             <label for="mail">Email:</label><br>
-            <input type="email"><br><br>
+            <input type="email"><br>
+            <label for="name">Massage:</label><br>
+            <textarea ></textarea></br>
+
             <input type="submit" value="Submit">
           </form>
     </div>
